# fcos_torch_backend

./: .gitignore  CMakeLists.txt  ReadMe.md
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/fcos_torch_backend/: config.hpp  fcos_torch_backend.hpp
script/: export_fcos_to_pt.py  export_to_pt.py  fcos_inference.py  fcos_torch_detector.py
src/: fcos_inference.cpp  fcos_torch_backend.cpp  fcos_torch_detector.cpp  main.cpp
test/: test_fcos_torch_backend.cpp
